# cmako

./: COPYING  Makefile.am  configure.ac  constants.h  gen-system.c  main.c  mako-vm.c  mako-vm.h  mako.c
build-aux/: lean.m4
include/: constants.h  draw.h  mako-vm.h  ui.h
src/: draw.c  main.c  mako-vm.c
